# CredMann

./: README.md
Backend/CPP/CredMannLib/: CredMannLib.sln
Backend/CPP/CredMannLib/CredMannLib/: AESCipherProvider.h  AESCryptoProvider.cpp  AESCryptoProvider.h  BaseBlockCipherProvider.h  BaseCryptoProvider.cpp  BaseCryptoProvider.h  CMakeLists.txt  ChaChaCipherProvider.cpp  ChaChaCipherProvider.h  Common.h  CredMannLib.vcxproj  CredMannLib.vcxproj.filters  FileChunker.cpp  FileChunker.h  FileChunkerState.cpp  FileChunkerState.h  ICryptoProvider.h  PasswordStrengthner.cpp  PasswordStrengthner.h  SaltGenerator.h  SerpentCipherProvider.h  SerpentCryptoProvider.cpp  SerpentCryptoProvider.h  TwofishCipherProvider.h  TwofishCryptoProvider.h  Util.h  framework.h
Backend/CPP/CredMannLib/CredMannLib/include/: Common.h  CredPackFormatElements.h  DebugHelpers.h  PasswordStrengthner.h
Backend/CPP/CredMannLib/CredMannLib/src/: ChaChaCipherProvider.cpp  FileChunker.cpp  FileChunkerState.cpp  PasswordStrengthner.cpp  dllmain.cpp  pch.h
Backend/CPP/CredMannLib/TestCredMannLib/: CMakeLists.txt  TestCredMannLib.cpp  TestCredMannLib.vcxproj  TestCredMannLib.vcxproj.filters  TestOne.h
Backend/DotNet/CredMann/: CredMann.sln
Backend/DotNet/CredMann/CredMann/: Class1.cs  CredMann.csproj
Backend/DotNet/CredMann/CredMann.Lib/: Class1.cs
Backend/DotNet/CredMann/CredMann.Lib/Common/: AppConfig.cs  CommonConstants.cs  DefaultConfig.cs
Backend/DotNet/CredMann/CredMann.Lib/Crypto/BlockCipher/: BlockCipherAdapter.cs  BlockCipherAdapterFactory.cs  CipherEnumMapper.cs  IBlockCipherAdapter.cs
Backend/DotNet/CredMann/CredMann.Lib/Extensions/: ArrayExtensions.cs
Backend/DotNet/CredMann/CredMann.Lib/Types/: BlockCipherEngine.cs
Backend/DotNet/CredMann/CredMann.Lib/Utils/: Base64Helper.cs  DataPadder.cs  RandomDataGenerator.cs  UtilFactory.cs
Backend/DotNet/CredMann/CredMann/Common/: AppConfig.cs  CommonConstants.cs  DefaultConfig.cs
Backend/DotNet/CredMann/CredMann/Types/: BlockCipherEngine.cs
Backend/DotNet/CredMann/CredMann/Utils/: Base64Helper.cs  DataPadder.cs  RandomDataGenerator.cs  UtilFactory.cs
Backend/DotNet/CredMann/CredMannTest/: CredMannTest.csproj  UnitTest1.cs
Backend/Java/JFxPasswordManagerTryout/: build.gradle  settings.gradle
Backend/Java/JFxPasswordManagerTryout/gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
